@@ -36,7 +36,9 @@
 #define ENGAGE_MERGE_TRUEHD_FRAMES          15
 #define ENGAGE_REMOVE_BITSTREAM_AR_INFO     16
 #define ENGAGE_VOBSUB_SUBPIC_STOP_CMDS      17
-#define ENGAGE_MAX_IDX                      ENGAGE_VOBSUB_SUBPIC_STOP_CMDS
+#define ENGAGE_NO_CUE_DURATION              18
+#define ENGAGE_NO_CUE_RELATIVE_POSITION     19
+#define ENGAGE_MAX_IDX                      19
 
 void engage_hacks(const std::string &hacks);
 void engage_hack(unsigned int id);
